--- a/scripts/package.json
+++ b/scripts/package.json
@@ -17,9 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
+    "exif": "^0.4.0",
     "flickrapi": "^0.3.28",
     "fs": "0.0.2",
     "geojson": "^0.2.0",
+    "graceful-fs": "^3.0.7",
     "http": "0.0.0",
     "jf": "^0.2.8",
     "joiner": "^0.4.2",
